Revert "同步线上店铺"
This reverts commit 8b09892b107fbbe8e15c3fa648496262c9ac6313.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,18 +8,27 @@
 <!doctype html>
 <html class="no-js" lang="{{ request.locale.iso_code }}" {% if isRtl %}dir="rtl"{% endif %}><head>
 
+<script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"187045393", enableAutoSpaTracking: true};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq");</script>
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-K45RJYLGKS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WL3M09PJVC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-K45RJYLGKS');
+  gtag('config', 'G-WL3M09PJVC');
 </script>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11207842177"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-<meta name="google-site-verification" content="kSVj7G01hN7iWvbDBEjhZCwgokpwPzOXpFopfiWZZIs" />
+  gtag('config', 'AW-11207842177');
+</script>
   
   {%- capture metaTags -%}
 	<meta charset="utf-8">
@@ -125,7 +134,7 @@
 <script src="{{ 'script-loader.js' | asset_url }}" defer></script>
 
 {% comment %} 提前注册动态生成的类名 {% endcomment %}
-{% comment %} <section class="md:w-[10%] md:w-[20%] md:w-[30%] md:w-[40%] md:w-[50%] md:w-[60%] md:w-[70%] md:w-1/3 md:w-1/2 md:w-2/3 md:w-full w-16 w-24 w-32 w-40 w-48 !absolute !top-auto md:w-48 md:w-56 w-48 w-56 shadow-black-700"></section>  {% endcomment %}
+{% comment %} <section class="max-w-1/3 rotate-180 z-10 object-contain md:w-[10%] md:w-[20%] md:w-[30%] md:w-[40%] md:w-[50%] md:w-[60%] md:w-[70%] md:w-1/3 md:w-1/2 md:w-2/3 md:w-full w-16 w-24 w-32 w-40 w-48 !absolute !top-auto md:w-48 md:w-56 w-48 w-56 shadow-black-700"></section>  {% endcomment %}
 
 </body>
 </html>
