--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -85,7 +85,7 @@
 	{%- endif -%}
 {%- endcapture -%}
 <div id="header" data-section-id="header" data-section-type="header-section" {% if settings.home_classic and template == "index" %}class="classic-style"{% endif %}>
-		<header class="site-header fl f-aic {{settings.align_logo}}{% if settings.nav_below_logo %} nav-below{% endif %}{% if settings.main_header_fullwidth %} fullwidth{% else %} page-width{% endif %}">
+		<header class="site-header fl f-aic {{settings.align_logo}}{% if settings.nav_below_logo %} nav-below{% endif %}{% if settings.main_header_fullwidth %} fullwidth{% else %} page-width xl:px-4 md:px-8 px-6{% endif %}">
 			<div class="mobile-nav hide-lg">
 				<a href="#" class="hdicon js-mobile-nav-toggle open" title="{{ 'layout.navigation.menu' | t }}"><i class="at at-bars-l" aria-hidden="true"></i></a>
 				{% if settings.enable_search %}
@@ -101,7 +101,7 @@
 			{% if settings.align_logo == "center" %}{{logo}}{% endif %}
 				<div class="icons-col fl f-jce f-aic">
 
-					{% render 'localization' %}
+					<div class="hidden md:block"> {% render 'localization' %} </div>
 
                   	{% if settings.enable_search %}
 						<a href="{{ routes.search_url }}" class="hdicon searchIco hide-sm hide-md" title="{{ 'general.search.tool_tip' | t }}"><i class="at at-search-l"></i></a>
